# manifestacoes-no-twitter

./: README.md  crawl.go  docker-compose.yml  pyproject.toml
manifestacoes/: __main__.py  db.py  to_csv.py
tests/: test_serialize.py
