[tool.poetry]
name = "manifestacoes-bolsonaro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.10.1"
typer = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
Black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
